--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,11 @@ h1 {
     background-color: rgb(19, 19, 19);
     padding: 1rem;
     color: whitesmoke;
+    text-align: center;
 }
 
 main {
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,7 +45,7 @@ main {
 .table {
     display: flex;
     border-radius: 0.3rem;
-    padding: 3rem 1rem;
+    padding: 1rem;
     width: 800px;
     justify-content: center;
     flex-direction: column;
