--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
+    min-width: 410px;
 }
 
 h1 {
@@ -16,6 +17,13 @@ h1 {
     padding: 1rem;
     color: whitesmoke;
     text-align: center;
+}
+
+.btns {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 main {
@@ -46,7 +54,6 @@ main {
     display: flex;
     border-radius: 0.3rem;
     padding: 1rem;
-    width: 800px;
     justify-content: center;
     flex-direction: column;
     align-items: center;
@@ -54,6 +61,8 @@ main {
 
 .hands {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .values {
@@ -121,14 +130,38 @@ button:disabled:hover {
 
 .game-area {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 1rem;
     width: 90%;
+    flex-wrap: wrap;
 }
 
 .cards-place {
     background-color: rgba(0, 0, 0, 0.356);
-    width: 49%;
+    width: 45%;
+    min-width: 360px;
     padding:1rem 2rem;
+    margin: 0.3rem;
     border-radius: 0.3rem;
+}
+
+footer {
+    color: whitesmoke;
+    padding: 1rem;
+    margin-top: 3rem;
+    width: 100%;
+    min-width: 250px;
+    text-align: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.24);
+}
+
+footer a {
+    color: rgba(250, 235, 215, 0.712);
+    text-decoration: none;
+    margin: 0.5rem;
+    display: block;
+}
+
+footer a:hover {
+    color: white;
 }
