--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@ body {
 }
 
 h1 {
-    font-size: 1.4rem;
-    background-color: rgb(19, 19, 19);
+    font-size: 1.3rem;
+    background-color: rgba(19, 19, 19, 0.911);
     padding: 1rem;
     color: whitesmoke;
     text-align: center;
@@ -34,8 +34,8 @@ main {
 }
 
 .play-btn {
-    margin: 1rem;
-    padding: 0.7rem;
+    margin: 0.4rem 1rem;
+    padding: 0.4rem 0.7rem;
     border-radius: 0.3rem;
     border: 2px solid rgba(255, 255, 255, 0);
     background-color: rgb(255 180 44);
@@ -147,7 +147,7 @@ button:disabled:hover {
 
 footer {
     color: whitesmoke;
-    padding: 1rem;
+    padding: 2rem;
     margin-top: 3rem;
     width: 100%;
     min-width: 250px;
@@ -158,8 +158,7 @@ footer {
 footer a {
     color: rgba(250, 235, 215, 0.712);
     text-decoration: none;
-    margin: 0.5rem;
-    display: block;
+    margin: 1rem;
 }
 
 footer a:hover {
