--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,13 @@ body {
 }
 
 h1 {
-    font-size: 1.3rem;
-    background-color: rgba(19, 19, 19, 0.911);
-    padding: 1rem;
+    font-size: 1.5rem;
+    background-color: rgba(19, 19, 19, 0.9);
+    padding: 0.6rem;
     color: whitesmoke;
     text-align: center;
+    border-bottom: 1px solid #ffffff5e;
+    font-weight: 300;
 }
 
 .btns {
@@ -27,7 +29,7 @@ h1 {
 }
 
 main {
-    padding: 1rem;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -53,10 +55,14 @@ main {
 .table {
     display: flex;
     border-radius: 0.3rem;
-    padding: 1rem;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    padding: 1rem;
+}
+
+.results {
+    padding: 1rem;
 }
 
 .hands {
@@ -91,7 +97,7 @@ main {
     text-align: center;
     border-radius: 0.2rem;
     width: 300px;
-    margin: 1rem 2rem;
+    margin: 0.4rem;
     background-color: rgb(255, 247, 236);
     box-shadow: 5px 5px 10px #0000005e;
 }
@@ -111,8 +117,9 @@ button:disabled:hover {
 .results p {
     text-align: center;
     color: white;
-    font-size: 1.3rem;
-    margin-top: 2rem;
+    font-size: 1.2rem;
+    margin: 0.5rem;
+    font-weight: 300;
 }
 
 .card-img {
@@ -124,8 +131,9 @@ button:disabled:hover {
 
 .cards-owner {
     color: white;
-    padding: 1rem;
+    margin-bottom: 1rem;
     font-size: 1.2rem;
+    font-weight: 300;
 }
 
 .game-area {
@@ -141,16 +149,14 @@ button:disabled:hover {
     width: 45%;
     min-width: 360px;
     padding:1rem 2rem;
-    margin: 0.3rem;
+    margin: 0.4rem;
     border-radius: 0.3rem;
 }
 
 footer {
     color: whitesmoke;
     padding: 2rem;
-    margin-top: 3rem;
-    width: 100%;
-    min-width: 250px;
+    margin-top: 5rem;
     text-align: center;
     border-top: 1px solid rgba(255, 255, 255, 0.24);
 }
